Resolve "Use target-action in option if defined assembled with server-action"